<resources>
    <string name="app_name">PlantCare</string>
    <string name="create_alarm">ALARM OLUŞTUR</string>
    <string name="save">KAYDET</string>
    <string name="remove">SİL</string>
    <string name="plant_name">Bitki Adı</string>
    <string name="water_alarm">Su Alarmı</string>
    <string name="my_plant">Benim Bitkilerim</string>
    <string name="published_plant">Yayınlanan Bitkiler</string>

    <string name="write_description">Not Ekle</string>
    <string name="add_image">Resim Ekle</string>
    <string-array name="array_day">
        <item>1 Günde</item>
        <item>2 Günde</item>
        <item>3 Günde</item>
    </string-array>
</resources>
