<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
            name="callback"
            type="example.smyy.plantcare.ui.DetailCallback" />

        <variable
            name="viewmodel"
            type="example.smyy.plantcare.viewmodel.PlantItemViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageButton
            android:id="@+id/ImgPlant"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="8dp"
            android:background="@android:color/transparent"
            android:onClick="@{callback::onClickPlantImage}"
            android:src="@mipmap/pot" />

        <EditText
            android:id="@+id/etName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:layout_margin="8dp"
            android:ems="10"
            android:text="@{viewmodel.name}"
            android:hint="@string/plant_name"
            android:inputType="textNoSuggestions" />

        <EditText
            android:id="@+id/etDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/btnCreateAlarm"
            android:layout_margin="8dp"
            android:ems="10"
            android:text="@{viewmodel.description}"
            android:hint="@string/write_description"
            android:inputType="textNoSuggestions"/>

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/water_alarm" />

        <Spinner
            android:id="@+id/spinner2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="@{callback::onClickEdit}"
                android:text="@string/save" />

            <Button
                android:id="@+id/button2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="@{callback::onClickRemove}"
                android:layout_weight="1"
                android:text="@string/remove" />
        </LinearLayout>

    </LinearLayout>
</layout>