<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
            name="callback"
            type="example.smyy.plantcare.ui.AddCallback" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/plant_back"
        android:orientation="vertical">

        <ImageButton
            android:id="@+id/ImgPlant"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="100dp"
            android:background="@android:color/transparent"
            android:onClick="@{callback::onClickPlantImage}"
            android:src="@mipmap/pot" />

        <EditText
            android:id="@+id/etName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:layout_margin="8dp"
            android:background="@drawable/background_edittext"
            android:ems="10"
            android:hint="@string/plant_name"
            android:inputType="textNoSuggestions"
            android:padding="10dp"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white" />

        <EditText
            android:id="@+id/etDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentStart="true"
            android:textColorHint="@android:color/white"
            android:background="@drawable/background_edittext"
            android:padding="10dp"
            android:textColor="@android:color/white"
            android:layout_below="@+id/btnCreateAlarm"
            android:layout_margin="8dp"
            android:ems="10"
            android:hint="@string/write_description"
            android:inputType="textNoSuggestions"/>

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:layout_marginLeft="10dp"
            android:text="@string/water_alarm" />

        <Spinner
            android:id="@+id/spinner2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp" />
        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:textColor="@android:color/white"
            android:layout_marginTop="10dp"
            android:text="Aydınlatma Alarmı" />

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:layout_marginTop="10dp" />
        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:textColor="@color/colorPrimaryDark"
            android:background="@drawable/background_button"
            android:onClick="@{callback::onClickSave}"
            android:text="KAYDET" />

    </LinearLayout>
</layout>