<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <import type="android.view.View" />
        <variable
            name="callback"
            type="example.smyy.plantcare.ui.DetailCallback" />

        <variable
            name="viewmodel"
            type="example.smyy.plantcare.viewmodel.PlantItemViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/plant_back"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/ImgPlant"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="45dp"
            android:background="@android:color/transparent"
            android:onClick="@{callback::onClickPlantImage}"
            android:src="@mipmap/plant" />

        <EditText
            android:id="@+id/etName"
            android:layout_width="251dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:backgroundTint="@android:color/white"
            android:ems="10"
            android:hint="@string/plant_name"
            android:inputType="textNoSuggestions"
            android:padding="10dp"
            android:text="@{viewmodel.name}"
            android:textColor="@android:color/white"
            android:textColorHint="@color/white_transparent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="34dp"
                android:layout_height="22dp"
                android:layout_gravity="center"
                android:layout_marginLeft="15dp"
                app:srcCompat="@mipmap/drop" />

            <Spinner
                android:id="@+id/spinnerWater"
                style="@style/spinner_style"
                android:layout_width="221dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:padding="10dp"
                android:textColor="@android:color/white"
                android:theme="@style/AppTheme" />


            <Button
                android:id="@+id/btnWaterAlarm"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_margin="8dp"
                android:background="@drawable/button_bg"
                android:drawableLeft="@mipmap/alarm_white"
                android:paddingLeft="8dp"
                android:text="@={viewmodel.wateringTime}"
                android:textColor="@android:color/white" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="13dp"
                android:layout_height="22dp"
                android:layout_gravity="center"
                android:layout_marginLeft="15dp"
                android:layout_weight="1"
                app:srcCompat="@mipmap/sun_white" />

            <Spinner
                android:id="@+id/spinnerSun"
                style="@style/spinner_style"
                android:layout_width="223dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:padding="10dp"
                android:textColor="@android:color/white"
                android:theme="@style/AppTheme" />


            <Button
                android:id="@+id/btnSunAlarm"
                android:layout_width="51dp"
                android:layout_height="35dp"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:background="@drawable/button_bg"
                android:drawableLeft="@mipmap/alarm_white"
                android:paddingLeft="8dp"
                android:text="@={viewmodel.sunTime}"
                android:textColor="@android:color/white" />
        </LinearLayout>


        <EditText
            android:id="@+id/etDescription"
            android:layout_width="340dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/btnCreateAlarm"
            android:layout_gravity="center"
            android:layout_margin="8dp"
            android:backgroundTint="@android:color/white"
            android:ems="10"
            android:hint="@string/write_description"
            android:inputType="textNoSuggestions"
            android:padding="8dp"
            android:text="@{viewmodel.description}"
            android:textColor="@android:color/white"
            android:textColorHint="@color/white_transparent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="101dp"
            android:layout_gravity="center"
            android:gravity="bottom|center_vertical|center_horizontal|end"
            android:orientation="horizontal"
            android:paddingEnd="25dp">

            <Button
                android:id="@+id/button"
                android:layout_width="143dp"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:background="@drawable/btn_bg"
                android:gravity="center_vertical|center"
                android:onClick="@{callback::onClickEdit}"
                android:text="@string/save"
                android:textColor="@android:color/white" />

            <Button
                android:id="@+id/btnRemove"
                android:layout_width="143dp"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:background="@drawable/btn_bg"
                android:onClick="@{callback::onClickRemove}"
                android:text="@string/remove"
                android:visibility="@{viewmodel!=null ? View.VISIBLE : View.GONE}"
                android:textColor="@android:color/white" />
        </LinearLayout>

    </LinearLayout>
</layout>